WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145830
REGRESSION(
r180867
): Tabbing to login field on iCloud.com doesn't have highlight for text
https://bugs.webkit.org/show_bug.cgi?id=145830
Summary
REGRESSION(r180867): Tabbing to login field on iCloud.com doesn't have highli...
Ryosuke Niwa
Reported
2015-06-09 17:44:53 PDT
REGRESSION (
r180867
): Tabbing to login field on iCloud.com doesn't have highlight for text
Attachments
Fixes the bug
(6.03 KB, patch)
2015-06-09 17:47 PDT
,
Ryosuke Niwa
darin
: review+
darin
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2015-06-09 17:47:57 PDT
Created
attachment 254617
[details]
Fixes the bug
Ryosuke Niwa
Comment 2
2015-06-09 17:48:34 PDT
<
rdar://problem/21133137
>
WebKit Commit Bot
Comment 3
2015-06-09 17:51:07 PDT
Attachment 254617
[details]
did not pass style-queue: ERROR: LayoutTests/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 4
2015-06-09 17:53:42 PDT
Hmm, because of that tab character, I think the commit queue will fail to land this.
Ryosuke Niwa
Comment 5
2015-06-09 17:55:55 PDT
(In reply to
comment #4
)
> Hmm, because of that tab character, I think the commit queue will fail to > land this.
Oops, will land it manually.
Ryosuke Niwa
Comment 6
2015-06-09 17:57:59 PDT
Committed
r185398
: <
http://trac.webkit.org/changeset/185398
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug