REGRESSION(r180867): Tabbing to login field on iCloud.com doesn't have highlight for text https://bugs.webkit.org/show_bug.cgi?id=145830

Reviewed by Darin Adler.

Source/WebCore:

The bug was caused by setSelection not updating RenderView when there is a style recalc scheduled
that doesn't trigger a layout. Fixed the bug by explicitly updating the selection in
Document::recalcStyle in that case.

Test: editing/selection/update-selection-by-style-change.html

* dom/Document.cpp:
(WebCore::Document::recalcStyle):
* editing/FrameSelection.cpp:
(WebCore::FrameSelection::updateAppearanceAfterLayout): Renamed from didLayout.
* editing/FrameSelection.h:
* page/FrameView.cpp:
(WebCore::FrameView::performPostLayoutTasks):

LayoutTests:

Added a regression test.

* editing/selection/update-selection-by-style-change-expected.html: Added.
* editing/selection/update-selection-by-style-change.html: Added.


Canonical link: https://commits.webkit.org/163870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185398 268f45cc-cd09-0410-ab3c-d52691b4dbfc