Source/WebCore/dom/Document.cpp
@@ -1811,6 +1811,9 @@ void Document::recalcStyle(Style::Change change)
     if (updatedCompositingLayers && !frameView.needsLayout())
         frameView.viewportContentsChanged();
 
+    if (!frameView.needsLayout())
+        frameView.frame().selection().updateAppearanceAfterLayout();
+
     // As a result of the style recalculation, the currently hovered element might have been
     // detached (for example, by setting display:none in the :hover style), schedule another mouseMove event
     // to check if any other elements ended up under the mouse pointer due to re-layout.
